--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "f06f43a1013bd4e8895a4a15f6820596"
 name = "solar-combination"
 handle = "solar-combination"
-application_url = "https://pike-florida-hormone-interactive.trycloudflare.com"
+application_url = "https://disagree-restaurants-gap-easily.trycloudflare.com"
 embedded = true
 
 [build]
@@ -13,20 +13,20 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_products,write_products"
+scopes = "read_inventory,read_products,write_products"
 
 [auth]
 redirect_urls = [
-  "https://pike-florida-hormone-interactive.trycloudflare.com/auth/callback",
-  "https://pike-florida-hormone-interactive.trycloudflare.com/auth/shopify/callback",
-  "https://pike-florida-hormone-interactive.trycloudflare.com/api/auth/callback"
+  "https://disagree-restaurants-gap-easily.trycloudflare.com/auth/callback",
+  "https://disagree-restaurants-gap-easily.trycloudflare.com/auth/shopify/callback",
+  "https://disagree-restaurants-gap-easily.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
 api_version = "2024-07"
 
 [app_proxy]
-url = "https://pike-florida-hormone-interactive.trycloudflare.com"
+url = "https://disagree-restaurants-gap-easily.trycloudflare.com"
 subpath = "proxy"
 prefix = "apps"
 
