--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@shopify/shopify-app-session-storage-mongodb": "^4.0.5",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "isbot": "^5.1.0",
     "mongoose": "^8.6.1",
     "prisma": "^5.11.0",
