--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.6.1",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
