--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.4.5",
     "isbot": "^5.1.0",
     "mongoose": "^8.6.1",
+    "papaparse": "^5.4.1",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
