--- a/shopify.app.solar-combination-local.toml
+++ b/shopify.app.solar-combination-local.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "a09c06b8d74e31fbcfe0ea426414e7e4"
-application_url = "https://workout-swing-yoga-nicole.trycloudflare.com"
+application_url = "https://acm-finances-wv-distant.trycloudflare.com"
 embedded = true
 name = "solar-combination-local"
 handle = "solar-combination-local"
@@ -9,9 +9,10 @@ handle = "solar-combination-local"
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "quickstart-629da44c.myshopify.com"
+include_config_on_deploy = true
 
 [webhooks]
-api_version = "2024-10"
+api_version = "2024-07"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
@@ -19,13 +20,13 @@ scopes = "read_inventory,read_orders,read_products,write_inventory,write_locatio
 
 [auth]
 redirect_urls = [
-  "https://workout-swing-yoga-nicole.trycloudflare.com/auth/callback",
-  "https://workout-swing-yoga-nicole.trycloudflare.com/auth/shopify/callback",
-  "https://workout-swing-yoga-nicole.trycloudflare.com/api/auth/callback"
+  "https://acm-finances-wv-distant.trycloudflare.com/auth/callback",
+  "https://acm-finances-wv-distant.trycloudflare.com/auth/shopify/callback",
+  "https://acm-finances-wv-distant.trycloudflare.com/api/auth/callback"
 ]
 
 [app_proxy]
-url = "https://workout-swing-yoga-nicole.trycloudflare.com"
+url = "https://acm-finances-wv-distant.trycloudflare.com"
 subpath = "local"
 prefix = "apps"
 
